@@ -43,6 +43,7 @@ depth: 1
  * Comments notice background overflows its container (Yekasumah)
  * Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)
  * Ensure the skip link (used for keyboard control) meets colour contrast guidelines for accessibility (Dauda Yusuf)
+ * Ensure tag fields correctly show in both dark and light Windows high-contrast modes (Albina Starykova)
 
 ## Upgrade considerations
 
