@@ -32,6 +32,7 @@ Changelog
  * Fix: Comments notice background overflows its container (Yekasumah)
  * Fix: Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)
  * Fix: Ensure the skip link (used for keyboard control) meets colour contrast guidelines for accessibility (Dauda Yusuf)
+ * Fix: Ensure tag fields correctly show in both dark and light Windows high-contrast modes (Albina Starykova)
 
 
 4.1.1 (xx.xx.xxxx) - IN DEVELOPMENT
